----- cvs ci ------
Tue Dec  5 03:17:40 UTC 2000
sms:
! replaced most stricmp-calls with strcmp-calls on the lower case variant
  of the variable (parsing should be significantly faster now)
! using enum for linkWithImportLog instead of strings

----- cvs ci ------
Tue Dec  5 01:48:22 UTC 2000
sms:
+ added emailSubj, emailFrom, emailEncoding

----- cvs ci ------
Sat Dec  2 02:13:10 UTC 2000
sms:
* temporarily deactivated commentChar support in dump.c

----- cvs ci ------
Sat Dec  2 01:59:28 UTC 2000
sms:
* fixed error message for commentChar
* fixed commentChar output in dump.c

----- cvs ci ------
Sat Dec  2 01:28:45 UTC 2000
sms:
* using strdup for string constants on init, so copyString can free them 
  safely

----- cvs ci ------
Thu Nov 30 15:20:17 NOVT 2000
max:
* dublicate strings safely overwrites the old ones

----- cvs ci ------
Thu Nov 23 23:27:53 NOVT 2000
max (patch from Serguei Revtov):
* using of overString instead of copyString for linkDefaults data copying

----- cvs ci ------
Thu Nov 16 12:23:56 MSK 2000
Fedor:
+ Added new token CommentChar (in tparser too)

----- cvs ci ------
Tue Nov 14 11:23:22 MSK 2000
max (patch from Serguei Revtov):
* BundleNameStyle: addrDiffAlways in tparser

----- cvs ci ------
Mon Nov 13 22:56:43 NOVT 2000
max:
* fixed parsing excludePassthroughCarbon

----- cvs ci ------
Sun Nov 12 13:34:40 NOVT 2000
max:
* dublicates checking in copyString()

----- cvs ci ------
Wed Nov  8 19:30:56 NOVT 2000
max:
* default password from linkdefaults can be changed (report from Ivan Prokudin)

----- cvs ci ------
Sun Oct 29 00:20:09 NOVST 2000
max:
* fixed packNetmail parsing

----- cvs ci ------
Mon Oct 23 18:09:53 MET 2000
  Michael Haase:
+ added statlog for hpt

Fri Oct 27 00:45:05 NOVST 2000
max:
* add tokens maxUnpackedNetmail, packNetmail for bsopack

Sun Oct 22 15:38:35 NOVST 2000
max:
* fixed version parsing

Sat Oct 21 19:41:45 NOVST 2000
max:
* noPause works for echoAreas & fileAreas

Mon Oct 16 21:44:12 NOVST 2000
max: