@@ -1,4 +1,9 @@
 ----- cvs ci ------
+Tue Dec  5 05:54:22 UTC 2000
+sms:
++ dumping fileareas and bbsareas
+
+----- cvs ci ------
 Tue Dec  5 03:17:40 UTC 2000
 sms:
 ! replaced most stricmp-calls with strcmp-calls on the lower case variant
